z-index issue fixed

--- a/src/app/components/shared/navbar/navbar.scss
+++ b/src/app/components/shared/navbar/navbar.scss
@@ -2,6 +2,7 @@
   width: 100vw;
   position: fixed;
   top: 0;
+  z-index: 1000;
   background-color: var(--secondary-accent);
   .navbar-container {
     width: 100%;
